--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "tslint.enable": true,
+  "tslint.autoFixOnSave": true,
   "beautify.language": {
     "css": [
       "css",
@@ -19,21 +21,9 @@
   "editor.formatOnType": true,
   "editor.formatOnPaste": false,
   "editor.formatOnSave": true,
+  "files.insertFinalNewline": true,
   "search.exclude": {
     "**/node_modules": true
   },
-  "standard.autoFixOnSave": true,
-  "standard.validate": [
-    "javascript",
-    {
-      "language": "html",
-      "autoFix": true
-    }
-  ],
-  "standard.options": {
-    "plugins": [
-      "html"
-    ]
-  },
-  "javascript.format.enable": false
+  "standard.autoFixOnSave": true
 }
