--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron --remote-debugging-port=9222 ."
+    "dev": "electron --remote-debugging-port=9222 .",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "Keiser Corp.",
   "devDependencies": {
-    "electron": "~1.6.2",
-    "eslint-plugin-html": "^3.2.0",
-    "standard": "^10.0.3"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015-node": "^6.1.1",
+    "standard": "^10.0.3",
+    "standard-loader": "^6.0.1",
+    "ts-loader": "^2.3.2",
+    "tslint": "^5.6.0",
+    "tslint-config-standard": "^6.0.1",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.4.2",
+    "webpack": "^3.5.5"
+  },
+  "dependencies": {
+    "electron": "^1.7.6"
   }
 }
