--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "electron --remote-debugging-port=9222 .",
-    "build": "webpack --config webpack.config.js"
+    "prestart": "webpack --config webpack.config.js",
+    "start": "electron ./dist/main.js"
   },
   "author": "Keiser Corp.",
   "devDependencies": {
+    "@types/electron": "^1.6.10",
+    "@types/node": "^8.0.23",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015-node": "^6.1.1",
+    "html-webpack-plugin": "^2.30.1",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
     "ts-loader": "^2.3.2",
