--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "newLine": "LF",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "sourceMap": true,
     "skipLibCheck": true,
     "allowJs": true
