--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "devDependencies": {
     "@types/electron": "^1.6.10",
     "@types/node": "^8.0.23",
+    "@types/usb": "^1.1.3",
+    "aws-sdk": "^2.100.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015-node": "^6.1.1",
     "html-webpack-plugin": "^2.30.1",
+    "octal-number-loader": "^0.1.4",
+    "shebang-loader": "0.0.1",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
     "ts-loader": "^2.3.2",
@@ -26,6 +30,7 @@
   },
   "dependencies": {
     "crc": "^3.4.4",
-    "electron": "^1.7.6"
+    "electron": "^1.7.6",
+    "usb": "git+https://github.com/tessel/node-usb.git#1.3.0"
   }
 }
