--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   "author": "Keiser Corp.",
   "devDependencies": {
     "@types/electron": "^1.6.10",
-    "@types/node": "^8.0.23",
+    "@types/node": "^8.0.24",
     "@types/usb": "^1.1.3",
     "aws-sdk": "^2.100.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015-node": "^6.1.1",
-    "html-webpack-plugin": "^2.30.1",
-    "octal-number-loader": "^0.1.4",
-    "shebang-loader": "0.0.1",
+    "electron-rebuild": "^1.6.0",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
-    "ts-loader": "^2.3.2",
+    "ts-loader": "^2.3.3",
     "tslint": "^5.6.0",
     "tslint-config-standard": "^6.0.1",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.4.2",
-    "webpack": "^3.5.5"
+    "typescript": "^2.5.1",
+    "webpack": "^3.5.5",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "@types/crc": "^3.4.0",
     "crc": "^3.4.4",
     "electron": "^1.7.6",
     "usb": "git+https://github.com/tessel/node-usb.git#1.3.0"
