--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,6 @@
-package-lock=false
+package-lock = false
+# runtime = electron
+# target = 1.7.6
+# target_arch = x64
+# disturl = https://atom.io/download/atom-shell
+# progress = true
