--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "author": "Keiser Corp.",
   "license": "MIT",
   "scripts": {
+    "postinstall": "./node_modules/.bin/electron-rebuild",
     "prestart": "webpack --config webpack.config.js",
     "start": "electron ./dist/main.js"
   },
   "devDependencies": {
-    "@types/electron": "^1.6.10",
+    "@types/crc": "^3.4.0",
     "@types/node": "^8.0.24",
     "@types/usb": "^1.1.3",
     "babel-core": "^6.26.0",
@@ -26,7 +27,6 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "@types/crc": "^3.4.0",
     "crc": "^3.4.4",
     "electron": "^1.7.6",
     "usb": "git+https://github.com/tessel/node-usb.git#1.3.0"
